--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=VCNBEG004\\MSSQLSERVER02;Database=library_system;Trusted_Connection=True;Encrypt=False;"
+    "DefaultConnection": "Server=VCNBEG001\\LOCALDB#8EABE9F0;Database=library_system;Trusted_Connection=True;Encrypt=False;"
   }
 }
